added first list to the ordered list

--- a/style.css
+++ b/style.css
@@ -583,6 +583,10 @@ video {
   margin-right: 0.5rem;
 }
 
+.ml-auto {
+  margin-left: auto;
+}
+
 .flex {
   display: flex;
 }
@@ -633,6 +637,43 @@ video {
 
 .min-w-\[80\%\] {
   min-width: 80%;
+}
+
+.min-w-fit {
+  min-width: -moz-fit-content;
+  min-width: fit-content;
+}
+
+.min-w-\[80\] {
+  min-width: 80;
+}
+
+.min-w-\[90\%\] {
+  min-width: 90%;
+}
+
+.min-w-\[8\%\] {
+  min-width: 8%;
+}
+
+.min-w-\[85\%\] {
+  min-width: 85%;
+}
+
+.min-w-\[82\%\] {
+  min-width: 82%;
+}
+
+.min-w-\[83\%\] {
+  min-width: 83%;
+}
+
+.min-w-\[84\%\] {
+  min-width: 84%;
+}
+
+.min-w-\[83\] {
+  min-width: 83;
 }
 
 .max-w-2xl {
@@ -690,6 +731,18 @@ video {
 
 .gap-y-16 {
   row-gap: 4rem;
+}
+
+.gap-y-1 {
+  row-gap: 0.25rem;
+}
+
+.gap-y-2 {
+  row-gap: 0.5rem;
+}
+
+.gap-y-1\.5 {
+  row-gap: 0.375rem;
 }
 
 .rounded-2xl {
@@ -843,6 +896,15 @@ video {
   line-height: 1.5rem;
 }
 
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.text-\[13px\] {
+  font-size: 13px;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -904,6 +966,10 @@ video {
 .text-zinc-700 {
   --tw-text-opacity: 1;
   color: rgb(63 63 70 / var(--tw-text-opacity));
+}
+
+.text-\[13p\] {
+  color: 13p;
 }
 
 .shadow-lg {
