--- a/style.css
+++ b/style.css
@@ -559,6 +559,10 @@ video {
   margin-right: 0.25rem;
 }
 
+.mr-2 {
+  margin-right: 0.5rem;
+}
+
 .mt-10 {
   margin-top: 2.5rem;
 }
@@ -579,14 +583,6 @@ video {
   margin-top: 1.5rem;
 }
 
-.mr-2 {
-  margin-right: 0.5rem;
-}
-
-.ml-auto {
-  margin-left: auto;
-}
-
 .flex {
   display: flex;
 }
@@ -599,81 +595,44 @@ video {
   display: none;
 }
 
-.h-40 {
-  height: 10rem;
-}
-
-.h-screen {
-  height: 100vh;
-}
-
 .h-10 {
   height: 2.5rem;
+}
+
+.h-40 {
+  height: 10rem;
 }
 
 .h-7 {
   height: 1.75rem;
 }
 
-.w-16 {
-  width: 4rem;
-}
-
-.w-\[200px\] {
-  width: 200px;
-}
-
-.w-1 {
-  width: 0.25rem;
+.h-screen {
+  height: 100vh;
 }
 
 .w-10 {
   width: 2.5rem;
 }
 
+.w-16 {
+  width: 4rem;
+}
+
 .w-7 {
   width: 1.75rem;
+}
+
+.w-\[200px\] {
+  width: 200px;
 }
 
 .min-w-\[80\%\] {
   min-width: 80%;
 }
 
-.min-w-fit {
-  min-width: -moz-fit-content;
-  min-width: fit-content;
-}
-
-.min-w-\[80\] {
-  min-width: 80;
-}
-
-.min-w-\[90\%\] {
-  min-width: 90%;
-}
-
-.min-w-\[8\%\] {
-  min-width: 8%;
-}
-
-.min-w-\[85\%\] {
-  min-width: 85%;
-}
-
-.min-w-\[82\%\] {
-  min-width: 82%;
-}
-
 .min-w-\[83\%\] {
   min-width: 83%;
-}
-
-.min-w-\[84\%\] {
-  min-width: 84%;
-}
-
-.min-w-\[83\] {
-  min-width: 83;
 }
 
 .max-w-2xl {
@@ -708,10 +667,6 @@ video {
   justify-content: space-between;
 }
 
-.justify-items-center {
-  justify-items: center;
-}
-
 .gap-20 {
   gap: 5rem;
 }
@@ -729,20 +684,18 @@ video {
        column-gap: 1rem;
 }
 
-.gap-y-16 {
-  row-gap: 4rem;
-}
-
 .gap-y-1 {
   row-gap: 0.25rem;
 }
 
-.gap-y-2 {
-  row-gap: 0.5rem;
+.gap-y-16 {
+  row-gap: 4rem;
 }
 
-.gap-y-1\.5 {
-  row-gap: 0.375rem;
+.space-y-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
 .rounded-2xl {
@@ -757,10 +710,6 @@ video {
   border-radius: 0.375rem;
 }
 
-.rounded {
-  border-radius: 0.25rem;
-}
-
 .border {
   border-width: 1px;
 }
@@ -768,6 +717,11 @@ video {
 .border-x {
   border-left-width: 1px;
   border-right-width: 1px;
+}
+
+.border-zinc-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(82 82 91 / var(--tw-border-opacity));
 }
 
 .border-zinc-700 {
@@ -779,15 +733,6 @@ video {
   border-color: rgb(63 63 70 / 0.4);
 }
 
-.border-zinc-600 {
-  --tw-border-opacity: 1;
-  border-color: rgb(82 82 91 / var(--tw-border-opacity));
-}
-
-.border-zinc-700\/60 {
-  border-color: rgb(63 63 70 / 0.6);
-}
-
 .border-zinc-700\/50 {
   border-color: rgb(63 63 70 / 0.5);
 }
@@ -795,6 +740,15 @@ video {
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-zinc-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(63 63 70 / var(--tw-bg-opacity));
+}
+
+.bg-zinc-700\/10 {
+  background-color: rgb(63 63 70 / 0.1);
 }
 
 .bg-zinc-800 {
@@ -805,15 +759,6 @@ video {
 .bg-zinc-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(24 24 27 / var(--tw-bg-opacity));
-}
-
-.bg-zinc-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(63 63 70 / var(--tw-bg-opacity));
-}
-
-.bg-zinc-700\/10 {
-  background-color: rgb(63 63 70 / 0.1);
 }
 
 .bg-fixed {
@@ -868,12 +813,21 @@ video {
   padding-right: 1rem;
 }
 
+.text-\[13px\] {
+  font-size: 13px;
+}
+
 .text-\[32px\] {
   font-size: 32px;
 }
 
 .text-\[8px\] {
   font-size: 8px;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .text-lg {
@@ -889,20 +843,6 @@ video {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
-
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
-.text-\[13px\] {
-  font-size: 13px;
 }
 
 .font-bold {
@@ -953,23 +893,9 @@ video {
   color: rgb(113 113 122 / var(--tw-text-opacity));
 }
 
-.text-zinc-50 {
-  --tw-text-opacity: 1;
-  color: rgb(250 250 250 / var(--tw-text-opacity));
-}
-
-.text-zinc-300 {
-  --tw-text-opacity: 1;
-  color: rgb(212 212 216 / var(--tw-text-opacity));
-}
-
 .text-zinc-700 {
   --tw-text-opacity: 1;
   color: rgb(63 63 70 / var(--tw-text-opacity));
-}
-
-.text-\[13p\] {
-  color: 13p;
 }
 
 .shadow-lg {
@@ -981,17 +907,6 @@ video {
 .shadow-zinc-800\/5 {
   --tw-shadow-color: rgb(39 39 42 / 0.05);
   --tw-shadow: var(--tw-shadow-colored);
-}
-
-.ring {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
-.ring-zinc-700 {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(63 63 70 / var(--tw-ring-opacity));
 }
 
 .transition {
@@ -1016,13 +931,13 @@ video {
   color: rgb(113 113 122 / var(--tw-text-opacity));
 }
 
-.hover\:bg-zinc-800\/50:hover {
-  background-color: rgb(39 39 42 / 0.5);
-}
-
 .hover\:bg-zinc-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(82 82 91 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-zinc-800\/50:hover {
+  background-color: rgb(39 39 42 / 0.5);
 }
 
 .hover\:text-teal-400:hover {
