--- a/style.css
+++ b/style.css
@@ -754,6 +754,11 @@ video {
   border-color: rgb(63 63 70 / 0.5);
 }
 
+.border-zinc-800 {
+  --tw-border-opacity: 1;
+  border-color: rgb(39 39 42 / var(--tw-border-opacity));
+}
+
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
