--- a/style.css
+++ b/style.css
@@ -538,6 +538,10 @@ video {
   position: absolute;
 }
 
+.relative {
+  position: relative;
+}
+
 .right-10 {
   right: 2.5rem;
 }
@@ -556,6 +560,14 @@ video {
 
 .right-16 {
   right: 4rem;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.left-0 {
+  left: 0px;
 }
 
 .-m-1 {
@@ -623,6 +635,10 @@ video {
   margin-top: 1.5rem;
 }
 
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
 .flex {
   display: flex;
 }
@@ -651,6 +667,10 @@ video {
   height: 100vh;
 }
 
+.h-full {
+  height: 100%;
+}
+
 .w-10 {
   width: 2.5rem;
 }
@@ -665,6 +685,10 @@ video {
 
 .w-\[200px\] {
   width: 200px;
+}
+
+.w-full {
+  width: 100%;
 }
 
 .min-w-\[80\%\] {
@@ -769,6 +793,14 @@ video {
   border-radius: 0.75rem;
 }
 
+.rounded {
+  border-radius: 0.25rem;
+}
+
+.rounded-3xl {
+  border-radius: 1.5rem;
+}
+
 .border {
   border-width: 1px;
 }
@@ -830,6 +862,14 @@ video {
 
 .p-6 {
   padding: 1.5rem;
+}
+
+.p-4 {
+  padding: 1rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
 }
 
 .px-1 {
@@ -949,6 +989,10 @@ video {
   line-height: 1.75rem;
 }
 
+.leading-normal {
+  line-height: 1.5;
+}
+
 .tracking-tight {
   letter-spacing: -0.025em;
 }
@@ -1001,6 +1045,10 @@ video {
   transition-duration: 500ms;
 }
 
+.duration-300 {
+  transition-duration: 300ms;
+}
+
 .placeholder\:text-zinc-500::-moz-placeholder {
   --tw-text-opacity: 1;
   color: rgb(113 113 122 / var(--tw-text-opacity));
@@ -1009,6 +1057,12 @@ video {
 .placeholder\:text-zinc-500::placeholder {
   --tw-text-opacity: 1;
   color: rgb(113 113 122 / var(--tw-text-opacity));
+}
+
+.hover\:scale-105:hover {
+  --tw-scale-x: 1.05;
+  --tw-scale-y: 1.05;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .hover\:bg-zinc-600:hover {
@@ -1023,6 +1077,59 @@ video {
 
 .hover\:bg-zinc-800\/50:hover {
   background-color: rgb(39 39 42 / 0.5);
+}
+
+.hover\:bg-zinc-700\/50:hover {
+  background-color: rgb(63 63 70 / 0.5);
+}
+
+.hover\:bg-zinc-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(161 161 170 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-zinc-600\/40:hover {
+  background-color: rgb(82 82 91 / 0.4);
+}
+
+.hover\:bg-zinc-600\/50:hover {
+  background-color: rgb(82 82 91 / 0.5);
+}
+
+.hover\:bg-zinc-900\/50:hover {
+  background-color: rgb(24 24 27 / 0.5);
+}
+
+.hover\:bg-zinc-500\/50:hover {
+  background-color: rgb(113 113 122 / 0.5);
+}
+
+.hover\:bg-zinc-500\/0:hover {
+  background-color: rgb(113 113 122 / 0);
+}
+
+.hover\:bg-zinc-500\/10:hover {
+  background-color: rgb(113 113 122 / 0.1);
+}
+
+.hover\:bg-zinc-800\/10:hover {
+  background-color: rgb(39 39 42 / 0.1);
+}
+
+.hover\:bg-zinc-900\/10:hover {
+  background-color: rgb(24 24 27 / 0.1);
+}
+
+.hover\:bg-zinc-700\/10:hover {
+  background-color: rgb(63 63 70 / 0.1);
+}
+
+.hover\:bg-zinc-300\/10:hover {
+  background-color: rgb(212 212 216 / 0.1);
+}
+
+.hover\:bg-zinc-200\/10:hover {
+  background-color: rgb(228 228 231 / 0.1);
 }
 
 .hover\:text-teal-400:hover {
@@ -1073,6 +1180,35 @@ video {
     min-width: 89%;
   }
 
+  .md\:min-w-\[8\%\] {
+    min-width: 8%;
+  }
+
+  .md\:min-w-\[88\%\] {
+    min-width: 88%;
+  }
+
+  .md\:min-w-\[87\%\] {
+    min-width: 87%;
+  }
+
+  .md\:min-w-\[88\] {
+    min-width: 88;
+  }
+
+  .md\:min-w-fit {
+    min-width: -moz-fit-content;
+    min-width: fit-content;
+  }
+
+  .md\:min-w-\[85\] {
+    min-width: 85;
+  }
+
+  .md\:min-w-\[85\%\] {
+    min-width: 85%;
+  }
+
   .md\:flex-row {
     flex-direction: row;
   }
@@ -1114,6 +1250,38 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:right-2 {
+    right: 0.5rem;
+  }
+
+  .lg\:right-20 {
+    right: 5rem;
+  }
+
+  .lg\:right-28 {
+    right: 7rem;
+  }
+
+  .lg\:col-start-1 {
+    grid-column-start: 1;
+  }
+
+  .lg\:col-start-3 {
+    grid-column-start: 3;
+  }
+
+  .lg\:col-start-2 {
+    grid-column-start: 2;
+  }
+
+  .lg\:col-end-2 {
+    grid-column-end: 2;
+  }
+
+  .lg\:col-end-3 {
+    grid-column-end: 3;
+  }
+
   .lg\:mx-12 {
     margin-left: 3rem;
     margin-right: 3rem;
@@ -1122,6 +1290,218 @@ video {
   .lg\:mx-16 {
     margin-left: 4rem;
     margin-right: 4rem;
+  }
+
+  .lg\:mr-1 {
+    margin-right: 0.25rem;
+  }
+
+  .lg\:mr-10 {
+    margin-right: 2.5rem;
+  }
+
+  .lg\:mr-20 {
+    margin-right: 5rem;
+  }
+
+  .lg\:flex {
+    display: flex;
+  }
+
+  .lg\:grid {
+    display: grid;
+  }
+
+  .lg\:min-w-\[80\] {
+    min-width: 80;
+  }
+
+  .lg\:min-w-\[80\%\] {
+    min-width: 80%;
+  }
+
+  .lg\:min-w-\[8\%\] {
+    min-width: 8%;
+  }
+
+  .lg\:min-w-\[83\%\] {
+    min-width: 83%;
+  }
+
+  .lg\:min-w-\[4\] {
+    min-width: 4;
+  }
+
+  .lg\:min-w-\[448\] {
+    min-width: 448;
+  }
+
+  .lg\:min-w-\[448px\] {
+    min-width: 448px;
+  }
+
+  .lg\:min-w-fit {
+    min-width: -moz-fit-content;
+    min-width: fit-content;
+  }
+
+  .lg\:max-w-\[448px\] {
+    max-width: 448px;
+  }
+
+  .lg\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:flex-row {
+    flex-direction: row;
+  }
+
+  .lg\:gap-1 {
+    gap: 0.25rem;
+  }
+
+  .lg\:gap-10 {
+    gap: 2.5rem;
+  }
+
+  .lg\:gap-0 {
+    gap: 0px;
+  }
+
+  .lg\:gap-y-1 {
+    row-gap: 0.25rem;
+  }
+
+  .lg\:gap-y-14 {
+    row-gap: 3.5rem;
+  }
+
+  .lg\:gap-y-10 {
+    row-gap: 2.5rem;
+  }
+
+  .lg\:gap-x-4 {
+    -moz-column-gap: 1rem;
+         column-gap: 1rem;
+  }
+
+  .lg\:p-2 {
+    padding: 0.5rem;
+  }
+
+  .lg\:p-2\.5 {
+    padding: 0.625rem;
+  }
+
+  .lg\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .lg\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .lg\:px-12 {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
+  .lg\:px-3 {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+  }
+
+  .lg\:px-2 {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+
+  .lg\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+
+  .lg\:py-2\.5 {
+    padding-top: 0.625rem;
+    padding-bottom: 0.625rem;
+  }
+
+  .lg\:py-3 {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+  }
+
+  .lg\:px-1 {
+    padding-left: 0.25rem;
+    padding-right: 0.25rem;
+  }
+
+  .lg\:px-16 {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
+
+  .lg\:pl-20 {
+    padding-left: 5rem;
+  }
+
+  .lg\:pl-2 {
+    padding-left: 0.5rem;
+  }
+
+  .lg\:pl-16 {
+    padding-left: 4rem;
+  }
+
+  .lg\:pl-1 {
+    padding-left: 0.25rem;
+  }
+
+  .lg\:pl-14 {
+    padding-left: 3.5rem;
+  }
+
+  .lg\:pr-3 {
+    padding-right: 0.75rem;
+  }
+
+  .lg\:pr-4 {
+    padding-right: 1rem;
+  }
+
+  .lg\:pt-8 {
+    padding-top: 2rem;
+  }
+
+  .lg\:pt-1 {
+    padding-top: 0.25rem;
+  }
+
+  .lg\:pt-10 {
+    padding-top: 2.5rem;
+  }
+
+  .lg\:pt-4 {
+    padding-top: 1rem;
+  }
+
+  .lg\:pl-12 {
+    padding-left: 3rem;
+  }
+
+  .lg\:pl-10 {
+    padding-left: 2.5rem;
+  }
+
+  .lg\:pl-0 {
+    padding-left: 0px;
   }
 }
 
