--- a/style.css
+++ b/style.css
@@ -1179,6 +1179,14 @@ video {
     right: 13rem;
   }
 
+  .xl\:right-48 {
+    right: 12rem;
+  }
+
+  .xl\:right-4 {
+    right: 1rem;
+  }
+
   .xl\:mx-24 {
     margin-left: 6rem;
     margin-right: 6rem;
@@ -1204,23 +1212,48 @@ video {
 }
 
 @media (min-width: 1536px) {
-  .\32xl\:right-\[7\] {
-    right: 7;
-  }
-
-  .\32xl\:right-\[77\] {
-    right: 77;
-  }
-
-  .\32xl\:right-\[770\] {
-    right: 770;
-  }
-
-  .\32xl\:right-\[770p\] {
-    right: 770p;
-  }
-
   .\32xl\:right-\[770px\] {
     right: 770px;
+  }
+
+  .\32xl\:right-0 {
+    right: 0px;
+  }
+
+  .\32xl\:flex {
+    display: flex;
+  }
+
+  .\32xl\:p-2 {
+    padding: 0.5rem;
+  }
+
+  .\32xl\:p-1 {
+    padding: 0.25rem;
+  }
+
+  .\32xl\:px-3 {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+  }
+
+  .\32xl\:px-2 {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+
+  .\32xl\:px-2\.5 {
+    padding-left: 0.625rem;
+    padding-right: 0.625rem;
+  }
+
+  .\32xl\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+
+  .\32xl\:py-4 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
   }
 }
